# FastAPI_Vue_Todo

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile
backend/api/: .env  pyproject.toml
backend/api/app/: main.py
backend/api/app/controller/: todo.py  user.py
backend/api/app/models/: database.py  models.py
backend/api/app/routers/: todo_router.py  user_router.py
backend/api/app/schemas/: schemas.py
backend/api/app/utils/: auth.py
frontend/: Dockerfile
frontend/app/: package.json  vue.config.js
frontend/app/src/: App.vue  main.ts
frontend/app/src/api/: auth.ts  todos.ts
frontend/app/src/components/: login.vue  register.vue  signForm.vue  todoForm.vue  todoList.vue
frontend/app/src/router/: index.ts
frontend/app/src/store/: index.ts  types.ts  user.ts
frontend/app/src/store/Auth/: actions.ts  getters.ts  index.ts  mutations.ts
frontend/app/src/store/Todo/: actions.ts  getters.ts  index.ts  mutations.ts
frontend/app/src/store/Token/: actions.ts  getters.ts  index.ts  mutations.ts
frontend/app/src/types/: todo.ts  user.ts  vue-awesome_components_Icon.d.ts
frontend/app/src/views/: HomeView.vue  TodoView.vue  UserView.vue
