[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ny-bin <ny.bin1210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.76.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119
ignore = E203,W503,W504

[tool.isort]
include_trailing_comma = true
line_length = 119
multi_line_output = 3